chores: updated linting, added prisma, added .nvmrc
