# apps/crypto-alert-service/src/types/request.types.ts
@@ -1,0 +1,5 @@
+export type AlertRequestBody = {
+    condition: string;
+    targetPrice: string;
+    symbol: string;
+};
