# apps/worker/src/types/mapper.types.ts
@@ -1,0 +1,7 @@
+export type Alert = {
+    symbol: string;
+    targetPrice: number;
+    condition: ">" | "<";
+    userId: string;
+    currentPrice: number;
+};
